--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,7 +17,12 @@
 		$('#new-form').submit(function(event) {
 			event.preventDefault();
 			var textbox = $('.new-todo');
-			console.log("Task: ", textbox.val());
+			var payload = {
+				task: { title: textbox.val() }
+			};
+			$.post("/tasks", payload).success(function(data) {
+				console.log("Successful HTTP Request");
+			});
 		});
 		
 		function taskHtml(task) {
