--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,17 +14,6 @@
 
 <script>
 	$(function() {
-		$('#new-form').submit(function(event) {
-			event.preventDefault();
-			var textbox = $('.new-todo');
-			var payload = {
-				task: { title: textbox.val() }
-			};
-			$.post("/tasks", payload).success(function(data) {
-				console.log("Successful HTTP Request");
-			});
-		});
-		
 		function taskHtml(task) {
 			var checkedStatus = task.done? "checked" : "";
 			var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' + " data-id='" + task.id + "'" + checkedStatus + '><label>' + task.title + '</label></div></li>';
@@ -49,6 +38,20 @@
 			ulTodos.html(htmlString);
 			
 			$('.toggle').change(toggleTask);
+		});
+		
+		$('#new-form').submit(function(event) {
+			event.preventDefault();
+			var textbox = $('.new-todo');
+			var payload = {
+				task: { title: textbox.val() }
+			};
+			$.post("/tasks", payload).success(function(data) {
+				var htmlString = taskHtml(data);
+				var ulTodos = $('.todo-list');
+				ulTodos.append(htmlString);
+				$('.toggle').change(toggleTask);
+			});
 		});
 	})
 </script>
