--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
 	<header class="header">
 		<h1>todos</h1>
 		<form id="new-form">
-			<input type="text" class="new-todo">
+			<input type="text" class="new-todo" placeholder="Add something here">
 		</form>
 	</header>
 	<section class="main">
@@ -10,4 +10,10 @@
 			
 		</ul>
 	</section>
+</section>
+
+<section class="author">
+	A <%= link_to "todo-mvc", "http://todomvc.com" %>
+	application, built by
+	<%= link_to "Evan Pineo", "https://github.com/evanpineo/" %>
 </section>
