--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -23,7 +23,7 @@ button {
 body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
-  background: #f5f5f5;
+  background: #2196F3;
   color: #4d4d4d;
   min-width: 230px;
   max-width: 550px;
@@ -281,7 +281,7 @@ label[for='toggle-all'] {
 }
 
 .author a {
-  color: #b83f45;
+  color: #12122b;
 }
 
 .filters {
@@ -376,7 +376,11 @@ html .clear-completed:active {
   .footer {
     height: 50px;
   }
-
+  
+  section.todoapp {
+    margin: 7px;
+  }
+  
   .filters {
     bottom: 10px;
   }
